--- a/app/pages/cobalt_business/index.njk
+++ b/app/pages/cobalt_business/index.njk
@@ -50,7 +50,7 @@ link: "#application-flow"
 },
 {
 text: "お申し込み",
-link: "#top"
+link: "#application-flow"
 }
 ] %}
 
@@ -67,7 +67,7 @@ link: "#top"
           <div class="title-notice">
             <h3 class="title-content">
               個人与信型ビジネスカード
-              {% include 'component/icons/circle-question.njk' %}
+              {# {% include 'component/icons/circle-question.njk' %} #}
             </h3>
           </div>
           <h1 class="ttl-primary">
@@ -84,7 +84,7 @@ link: "#top"
           </div>
 
           <div class="banner-btn">
-            <a class="banner-btn__option blue_gradient_btn" href="#">お申し込みはこちら</a>
+            <a class="banner-btn__option blue_gradient_btn" href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14XK&sd=80F" target="_blank">お申し込みはこちら</a>
           </div>
 
         </div>
@@ -103,15 +103,15 @@ link: "#top"
 
       <div class="grid-card-containers">
         <div class="card-item">
-          <a class="card">
+          <div class="card">
             <div class="card-head">年会費</div>
             <div class="card-content">
               <div><span class="percent blue-text">永年無料</span></div>
             </div>
-          </a>
+          </div>
         </div>
         <div class="card-item">
-          <a class="card">
+          <div class="card">
             <div class="card-head">永久不滅ポイント優遇</div>
             <div class="card-content">
               <div><span class="blue-text"> 国内：</span> 1,000円<font size="2">(税込)</font>で <span
@@ -119,7 +119,7 @@ link: "#top"
               <div class="minus-margin"><span class="blue-text"> 海外：</span> 1,000円<font size="2">(税込)</font>で <span
                   class="percent blue-text">2</span> <span class="blue-text">ポイント</span></div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
     </div>
@@ -164,9 +164,8 @@ link: "#top"
         <strong>書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。</strong>
       </h4>
       <div>
-        <a href="" class="blue_gradient_btn">お申し込みはこちら</a>
+        <a href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14XK&sd=80F" target="_blank" class="blue_gradient_btn">お申し込みはこちら</a>
       </div>
-      <p class="note">※申込み時にフォームにて、決算内容の入力は必要です。決算内容がわかるもののご用意をお願いいたします。</p>
     </div>
   </section>
 
@@ -189,7 +188,7 @@ link: "#top"
             入会資格
           </div>
           <div class="col-right">
-            <div class="ttl-quaternary">個人事業主様またはフリーランス、経営者の方（高校生を除く）</div>
+            <div class="ttl-quaternary">個人事業主またはフリーランス、経営者の方（高校生を除く）</div>
           </div>
         </div>
       </div>
@@ -238,7 +237,7 @@ link: "#top"
             <img src="/assets/img/cobalt_business/add_service4.png" alt="work image">
           </div>
           <div class="card-content">
-            <h4 class="ttl-quaternary">貸し会議室、<br />事務用品などのご優待</h4>
+            <h4 class="ttl-quaternary">貸し会議室、<br />レンタカーなどのご優待</h4>
             <div class="ttl-normal">
               レンタカー、電話代行サービス、貸会議室など、さまざまな業種の経費のお支払いに、料金交渉の手間もなくいつでも優待価格でご利用いただけます。</div>
           </div>
@@ -444,7 +443,7 @@ link: "#top"
                 <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
               </ul>
 
-              <a href="#" class="bondi_blue_outline_btn aiS">
+              <a href="/platinum_business/" class="bondi_blue_outline_btn aiS">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
               </a>
             </div>
@@ -463,14 +462,6 @@ link: "#top"
       <div class="card-comparison">
         <p class="text-muted">※1：サービスはカードごとに選択いただくサービスとなります。</p>
         <p class="text-muted">※上記一覧は概要となります。詳しくはサービス記載項目をご確認ください。</p>
-      </div>
-
-      <div class="contact-us">
-        <p>「どのビジネスカードがよいかわからない」という方はお気軽にご相談下さい。<br />
-          担当者がカード選びをサポートさせていただきます。
-        </p>
-
-        <a href="#" class="bondi_blue_btn more btn-contact">お問い合わせはこちら</a>
       </div>
     </div>
   </section>
@@ -558,13 +549,15 @@ link: "#top"
       </div>
 
       <div class="btn-container small">
-        <span class="bondi_blue_btn">
-          お申し込みはこちら
-          <svg xpl-45ns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
-            <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
-              fill="none" stroke="#fff" stroke-width="2" />
-          </svg>
-        </span>
+        <a href="https://entry.saisoncard.co.jp/cardapp3/entry?cd=14XK&sd=80F" target="_blank">
+          <span class="bondi_blue_btn">
+            お申し込みはこちら
+            <svg xpl-45ns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+              <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
+                fill="none" stroke="#fff" stroke-width="2" />
+            </svg>
+          </span>
+        </a>
       </div>
     </div>
   </section>
