--- a/app/pages/concur_expense/index.njk
+++ b/app/pages/concur_expense/index.njk
@@ -46,7 +46,7 @@ text: "よくある質問",
 link: "#faq"
 },
 {
-text: "資料・お問い合わせ",
+text: "お問い合わせ",
 link: "#material"
 }
 ] %}
@@ -82,11 +82,11 @@ link: "#material"
           </h5>
         </div>
         <div class="section-welcome__act">
-          <a href="#" class="act-more black_more">
+          <a href="/contact/" class="act-more black_more">
             <div class="act-more-tooltip pc-only">
               <h4 class="act-more-tooltip__content">Concur Expenseが3分でわかる!</h4>
             </div>
-            資料ダウンロード
+            お問い合わせはこちら
           </a>
         </div>
       </div>
@@ -242,12 +242,12 @@ link: "#material"
       <h1 class="ttl-primary">Concur Expenseが、経費精算に関するお悩みを解決します。</h1>
       <div class="act-more">
         <div class="act-more-tooltip">
-          <h4 class="act-more-tooltip__content">{{"「Concur Expense」の仕組みとメリットが3分でわかる" | safe}}</h4>
+          <h4 class="act-more-tooltip__content">{{"まずは相談したいという方はお気軽にご連絡下さい！" | safe}}</h4>
         </div>
         <div class="act-more-content">
           <div class="act-more-content-btn">
-            <a href="#" class="blue_gradient_btn">
-              サービス資料ダウンロード
+            <a href="/contact/" class="blue_gradient_btn">
+              ご相談・お問い合わせ（無料）
             </a>
           </div>
         </div>
@@ -402,7 +402,7 @@ link: "#material"
       </ul>
 
       <div class="section-more">
-        <a href="/contact" class="act-more blue_gradient_btn">
+        <a href="/contact/" class="act-more blue_gradient_btn">
           <div class="act-more-tooltip">
             <h4 class="act-more-tooltip__content">{{"まずは相談したいという方はお気軽にご連絡下さい！" | safe}}</h4>
           </div>
@@ -438,9 +438,9 @@ link: "#material"
     <div class="section-more">
       <a href="#" class="act-more blue_gradient_btn">
         <div class="act-more-tooltip">
-          <h4 class="act-more-tooltip__content">{{"ご利用したい機能に応じて4つの料金プランをご用意しています。詳しく知りたい方はサービス資料をご覧ください!" | safe}}</h4>
+          <h4 class="act-more-tooltip__content">{{"ご利用したい機能に応じて4つの料金プランをご用意しています。詳しく知りたい方はお問い合わせください！" | safe}}</h4>
         </div>
-        サービス資料ダウンロード
+        ご相談・お問い合わせ（無料）
       </a>
     </div>
   </section>
@@ -495,20 +495,6 @@ link: "#material"
       <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
-            <div href="#" class="card">
-              <summary class="card__box">
-                <div class="card__box--ttl">サービス内容について詳しく知りたい方はこちら</div>
-                <div class="card__box--cont">
-                  <div class="card__box--image">
-                    <img src="/assets/img/payment_com/payment_contact2.png" />
-                  </div>
-                  <div class="card__box--txt">
-                    Concur Expenseのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
-                  </div>
-                </div>
-                <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
-              </summary>
-            </div>
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">営業担当に相談・お問い合わせをしたい方はこちら</div>
