--- a/app/pages/gold_business_pro/index.njk
+++ b/app/pages/gold_business_pro/index.njk
@@ -46,7 +46,7 @@ link: "#application-flow"
 },
 {
 text: "お申し込み",
-link: "#top"
+link: "#application-flow"
 }
 ] %}
 
@@ -61,7 +61,7 @@ link: "#top"
           <div class="title-notice">
             <h3 class="title-content">
               法人与信型ビジネスカード
-              {% include 'component/icons/circle-question.njk' %}
+              {# {% include 'component/icons/circle-question.njk' %} #}
             </h3>
           </div>
           <h1 class="ttl-primary">
@@ -92,8 +92,8 @@ link: "#top"
           </div>
 
           <div class="banner-btn">
-            <a class="banner-btn__option blue_gradient_btn" href="#">お申し込みはこちら</a>
-            <a class="banner-btn__option bondi_blue_outline_btn" href="#">お問い合わせはこちら</a>
+            <a class="banner-btn__option blue_gradient_btn" href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=2&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number=" target="_blank">お問い合わせはこちら</a>
+            <a class="banner-btn__option bondi_blue_outline_btn" href="/contact/">お問い合わせはこちら</a>
           </div>
 
         </div>
@@ -111,22 +111,22 @@ link: "#top"
 
       <div class="grid-card-containers or">
         <div class="card-item">
-          <a class="card or">
+          <div class="card or">
             <div class="card-head">キッシュバックサービス</div>
             <div class="card-content">
               <div>支払い金額の<span class="percent blue-text">0.5％</span>をキャッシュバック</div>
             </div>
-          </a>
+          </div>
           <p class="card-description">カードでお支払いいただくだけで、毎日の業務にかかわる費用はもちろん、公共料金や税金の支払い、広告費や資材購入費など経費の支払いが自動的にキャッシュバックされます。
           </p>
         </div>
         <div class="card-item">
-          <a class="card">
+          <div class="card">
             <div class="card-head">お支払い１ヵ月スキップ払い</div>
             <div class="card-content">
               <div>お支払いを最長<span class="percent blue-text">84</span>日後・手数料<span class="percent blue-text">0</span>円</div>
             </div>
-          </a>
+          </div>
           <p class="card-description">カードご利用からお支払日まで最大84日間のお支払猶予があるため、支払いサイトと入金サイトの課題解決をサポート、社用資金の効率的な運用が可能となります。
           </p>
         </div>
@@ -438,7 +438,7 @@ link: "#top"
                 <li>AMEXセンチュリオンデザイン採用</li>
                 <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
               </ul>
-              <a href="#" class="bondi_blue_outline_btn">
+              <a href="/platinum_business_pro/" class="bondi_blue_outline_btn">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
               </a>
             </div>
@@ -455,7 +455,7 @@ link: "#top"
               <ul>
                 <li>部署名・費用項目名での発番可能 </li>
               </ul>
-              <a href="#" class="bondi_blue_outline_btn">
+              <a href="/purchasing_card/" class="bondi_blue_outline_btn">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
               </a>
             </div>
@@ -512,7 +512,7 @@ link: "#top"
 
     <div class="btn-actions">
       <a href="#" class="btn bondi_blue_outline_btn">もっと見る</a>
-      <a href="#" class="btn bondi_blue_btn more btn-other-question">その他のご質問をしたい方はこちら</a>
+      <a href="/contact/" class="btn bondi_blue_btn more btn-other-question">その他のご質問をしたい方はこちら</a>
     </div>
 
   </section>
