--- a/app/pages/purchasing_card/index.njk
+++ b/app/pages/purchasing_card/index.njk
@@ -46,7 +46,7 @@ link: "#application-flow"
 },
 {
 text: "お申し込み",
-link: "#top"
+link: "#application-flow"
 }
 ] %}
 
@@ -61,7 +61,7 @@ link: "#top"
           <div class="title-notice">
             <h3 class="title-content">
               法人与信型ビジネスカード
-              {% include 'component/icons/circle-question.njk' %}
+              {# {% include 'component/icons/circle-question.njk' %} #}
             </h3>
           </div>
           <h1 class="ttl-primary">
@@ -93,8 +93,8 @@ link: "#top"
           </div>
 
           <div class="banner-btn">
-            <a class="banner-btn__option blue_gradient_btn" href="#">お申し込みはこちら</a>
-            <a class="banner-btn__option bondi_blue_outline_btn" href="#">お問い合わせはこちら</a>
+            <a class="banner-btn__option blue_gradient_btn" href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=3&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number=" target="_blank">お問い合わせはこちら</a>
+            <a class="banner-btn__option bondi_blue_outline_btn" href="/contact/">お問い合わせはこちら</a>
           </div>
 
         </div>
@@ -112,24 +112,24 @@ link: "#top"
 
       <div class="grid-card-containers or">
         <div class="card-item">
-          <a class="card or">
+          <div class="card or">
             <div class="card-head">キッシュバックサービス</div>
             <div class="card-content">
               <div>支払い金額の<span class="percent blue-text">0.5％</span>をキャッシュバック</div>
             </div>
-          </a>
+          </div>
           <p class="card-description">カードでお支払いいただくだけで、毎日の業務にかかわる費用はもちろん、公共料金や税金の支払い、広告費や資材購入費など経費の支払いが自動的にキャッシュバックされます。
           </p>
         </div>
         <div class="card-item">
-          <a class="card">
+          <div class="card">
             <div class="card-head">お支払い１ヵ月スキップ払い</div>
             <div class="card-content">
               <div>お支払いを最長<span class="percent blue-text">84</span>日後・手数料<span class="percent blue-text">0</span>円<br/>
                 <span class="percent blue-text">0.25%</span>のキャッシュバック
               </div>
             </div>
-          </a>
+          </div>
           <p class="card-description">カードご利用からお支払日まで最大84日間のお支払猶予があるため、支払いサイトと入金サイトの課題解決をサポート。さらに支払い額の0.25％がキャッシュバックされ、社用資金の効率的な運用が可能となります。
           </p>
         </div>
@@ -175,7 +175,7 @@ link: "#top"
         <strong>書類郵送に取られる期間がなくなるため、発行までにかかる期間の短縮ができます。</strong>
       </h4>
       <div>
-        <a href="" class="blue_gradient_btn">お申し込みはこちら</a>
+        <a href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=3&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number=" target="_blank" class="blue_gradient_btn">お申し込みはこちら</a>
       </div>
       <p class="note">※申込み時にフォームにて、決算内容の入力は必要です。決算内容がわかるもののご用意をお願いいたします。</p>
     </div>
@@ -410,7 +410,7 @@ link: "#top"
                 <li>AMEXセンチュリオンデザイン採用</li>
                 <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
               </ul>
-              <a href="#" class="bondi_blue_outline_btn">
+              <a href="/platinum_business_pro/" class="bondi_blue_outline_btn">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
               </a>
             </div>
@@ -420,7 +420,7 @@ link: "#top"
               <ul>
                 <li>国内ラウンジサービス</li>
               </ul>
-              <a href="#" class="bondi_blue_outline_btn">
+              <a href="/gold_business_pro/" class="bondi_blue_outline_btn">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
               </a>
             </div>
@@ -445,7 +445,7 @@ link: "#top"
           担当者がカード選びをサポートさせていただきます。
         </p>
 
-        <a href="#" class="bondi_blue_btn more btn-contact">お問い合わせはこちら</a>
+        <a href="/contact/" class="bondi_blue_btn more btn-contact">お問い合わせはこちら</a>
       </div>
     </div>
   </section>
@@ -484,7 +484,7 @@ link: "#top"
 
     <div class="btn-actions">
       <a href="#" class="btn bondi_blue_outline_btn">もっと見る</a>
-      <a href="#" class="btn bondi_blue_btn more btn-other-question">その他のご質問をしたい方はこちら</a>
+      <a href="/contact/" class="btn bondi_blue_btn more btn-other-question">その他のご質問をしたい方はこちら</a>
     </div>
 
   </section>
@@ -544,13 +544,15 @@ link: "#top"
       </div>
 
       <div class="btn-container">
-        <span class="bondi_blue_btn">
-          お申し込みはこちら
-          <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
-            <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
-              fill="none" stroke="#fff" stroke-width="2" />
-          </svg>
-        </span>
+        <a href="https://www.saisoncard.co.jp/bizpro/kiyaku?app_card=3&pioneer_store_number=3166968&referral_store_number=0000001&referral_contact_number=" target="_blank">
+          <span class="bondi_blue_btn">
+            お申し込みはこちら
+            <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+              <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
+                fill="none" stroke="#fff" stroke-width="2" />
+            </svg>
+          </span>
+        </a>
       </div>
     </div>
   </section>
