--- a/app/pages/gold_business_pro/index.njk
+++ b/app/pages/gold_business_pro/index.njk
@@ -451,7 +451,7 @@ link: "#application-flow"
             </div>
           </div>
           <div class="third-column">
-            <div class="content-col direction-col aiS">
+            <div class="content-col direction-col aiS gold">
               <ul>
                 <li>部署名・費用項目名での発番可能 </li>
               </ul>
