--- a/app/pages/purchasing_card/index.njk
+++ b/app/pages/purchasing_card/index.njk
@@ -416,7 +416,7 @@ link: "#application-flow"
             </div>
           </div>
           <div class="second-column">
-            <div class="content-col direction-col aiS">
+            <div class="content-col direction-col aiS purchasing">
               <ul>
                 <li>国内ラウンジサービス</li>
               </ul>
