--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -133,7 +133,7 @@
       <h3 class="ttl-tertiary">
         セゾンフクリコは、<div class="yellow-bottom">
           わずか月額385円(税込)
-        </div> でご利用できる<strong>中小企業向けの法定外複利厚生サービス</strong>です。<br>
+        </div> でご利用できる<strong>中小企業向けの法定外福利厚生サービス</strong>です。<br>
         <strong>従業員のエンゲージメント・企業価値の向上に貢献します。</strong>
       </h3>
 
@@ -202,7 +202,7 @@
                 <div class="arrow"></div>
                 <div class="welfare-more-tooltip">
                   <h3 class="welfare-more-tooltip__content">
-                    完全アウトソーシング型の福利厚生サービスなので、</br>新たな業務が増える心配はありません。</br>運用は全てお任せください。</h3>
+                    完全アウトソーシング型の福利厚生サービスなので、</br>新たな業務が増える心配はありません。</br>運用はすべてお任せください。</h3>
                 </div>
               </div>
             </div>
