--- a/app/assets/scss/4-pages/_concur_expense.scss
+++ b/app/assets/scss/4-pages/_concur_expense.scss
@@ -255,6 +255,7 @@
         position: relative;
         line-height: 31px;
         padding: 18px 80px 20px 70px;
+        font-size: 16px;
 
         @media #{$sp} {
           margin: auto;
