--- a/app/assets/scss/4-pages/_seminar_detail.scss
+++ b/app/assets/scss/4-pages/_seminar_detail.scss
@@ -104,7 +104,7 @@
 
         @media #{$sp} {
           font-size: 22px;
-          text-align: center;
+          text-align: left;
           margin-bottom: 30px;
         }
       }
@@ -156,7 +156,7 @@
             width: 30px;
             height: 30px;
             background: url("../img/common/check_g.svg") 50% / contain no-repeat;
-          } 
+          }
         }
 
         @media screen and (max-width: 1200px) {
@@ -214,6 +214,12 @@
 
           margin-bottom: 30px;
 
+          p {
+            @media #{$sp} {
+              text-align: left;
+            }
+          }
+
           .sub-section-heading {
             font-size: 26px;
             color: #0497b5;
@@ -228,6 +234,9 @@
             font-size: 22px;
             font-weight: 500;
             margin-bottom: 10px;
+            @media #{$sp} {
+              text-align: left;
+            }
           }
 
           p {
