--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -65,7 +65,7 @@ link: "#application-flow"
           <div class="title-notice">
             <h3 class="title-content">
               個人与信型ビジネスカード
-              {% include 'component/icons/circle-question.njk' %}
+              {# {% include 'component/icons/circle-question.njk' %} #}
             </h3>
           </div>
           <h1 class="ttl-primary">
