add link for button in reduction expense and business efficiency

--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -40,7 +40,7 @@
           <div class="group__ttl">サービス</div>
           <ul class="group__list">
             <li>
-              <a href="#">サービス一覧</a>
+              <a href="/service/">サービス一覧</a>
             </li>
             <li>
               <a href="/smaller_companies/">中小企業向けサービス</a>
