--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -270,7 +270,7 @@ link: "#"
                     </h5>
                   </dt>
                 </dl>
-                <a href="#" class="bondi_blue_outline_btn">「Concur Expense」をもっと詳しく</a>
+                <a href="/concur_expense/" class="bondi_blue_outline_btn">「Concur Expense」をもっと詳しく</a>
               </div>
             </div>
           </div>
