--- a/app/pages/reduction_expenses/index.njk
+++ b/app/pages/reduction_expenses/index.njk
@@ -92,8 +92,7 @@
                   <li class="flex card-item02 gap20">
                     <div class="flex gap20 card__box-wrapper">
                       <div class="credit-card02">
-                        <img src="{{ content_item.image }}" alt="Your Image"
-                          class="credit-card-img">
+                        <a href="{{ content_item.link }}"><img src="{{ content_item.image }}" alt="Your Image" class="credit-card-img"></a>
                       </div>
 
                       <div class="card__box-title">
@@ -115,7 +114,7 @@
                     </div>
 
                     <div class="action">
-                      <a class="bondi_blue_btn">詳細はこちら</a>
+                      <a href="{{ content_item.link }}" class="bondi_blue_btn">詳細はこちら</a>
                     </div>
                   </li>
                 {% endfor %}
@@ -133,8 +132,7 @@
                   <li class="flex card-item02 gap20">
                     <div class="flex gap20 card__box-wrapper">
                       <div class="credit-card02">
-                        <img src="{{ content_item.image }}" alt="Your Image"
-                          class="credit-card-img">
+                        <a href="{{ content_item.link }}"><img src="{{ content_item.image }}" alt="Your Image" class="credit-card-img"></a>
                       </div>
 
                       <div class="card__box-title">
@@ -155,7 +153,7 @@
                     </div>
 
                     <div class="action">
-                      <a class="bondi_green_btn">詳細はこちら</a>
+                      <a href="{{ content_item.link }}" class="bondi_green_btn">詳細はこちら</a>
                     </div>
                   </li>
                 {% endfor %}
